# sync-ai-clis

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.ko.md  README.md  SECURITY.md  SPEC.md  dist-workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  new-tool.yml
.github/winget/0.1.0/: hyeonbungi.sync-ai-clis.installer.yaml  hyeonbungi.sync-ai-clis.locale.en-US.yaml  hyeonbungi.sync-ai-clis.yaml
.github/workflows/: ci.yml  container.yml  integration.yml  publish-crates.yml  publish-npm.yml  publish-scoop.yml  release.yml  winget-bootstrap.yml  winget.yml
docker/: README.md  container-test.sh  run-matrix.sh
release-notes/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md
src/: audit.rs  baseline.rs  check.rs  cli.rs  config.rs  doctor.rs  engine.rs  lib.rs  main.rs  os.rs  report.rs  runner.rs  source.rs  version.rs
src/tools/: antigravity.rs  claude.rs  codex.rs  gemini.rs  kiro.rs  mod.rs
tests/: README.md  cli_smoke.rs  command_selection.rs
wix/: main.wxs
