[package]
name = "sync-ai-clis"
version = "0.4.0"
edition = "2024"
description = "Detect, install, and keep up to date multiple AI coding CLIs (Claude Code, Codex, Gemini, Kiro, Antigravity) with one command"
authors = ["김현우 (hyeonbungi) <tech@indiedrive.co.kr>"]
license = "MIT"
repository = "https://github.com/hyeonbungi/sync-ai-clis"
homepage = "https://github.com/hyeonbungi/sync-ai-clis"
readme = "README.md"
keywords = ["cli", "updater", "installer", "ai", "devtools"]
categories = ["command-line-utilities", "development-tools"]
# Keep the published crate lean: ship the code, not the docs harness.
# Leading slashes anchor to the package root (bare names match at any depth).
include = ["/src/**", "/Cargo.toml", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[package.metadata.wix]
upgrade-guid = "4B50277E-CA7D-469D-A3EC-7EA95E8C68FE"
path-guid = "40255BFC-DE5C-411D-BF72-A997319DBB8C"
license = false
eula = false

[dependencies]
anstream = "1.0.0"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = "3.1.1"
toml = "1.1.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
